# gpt-ui

./: Cargo.toml  README.md
src/: conversation.rs  list.rs  main.rs  save_load.rs  ui_modules.rs  user_settings.rs
src/save_load/: load.rs  save.rs
src/ui_modules/: chat_hist_ui.rs  conv_ui.rs  delete_conv_ui.rs  rename_conv_ui.rs  settings_ui.rs
