[package]
name = "gpt-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
eframe = "0.27.2"
egui = "0.27.2"
rand = "0.8.5"
reqwest = {version = "0.12.4", features = ["blocking", "charset"]}
rfd = "0.14.1"
serde = {version = "1.0.198", features = ["derive"]}
serde_json = "1.0.116"
uuid = {version = "1.9.1", features = ["v4", "serde"]}
